# otus_course

./: .gitignore  .travis.yml  README.md
less1.1/: .travis.yml  CMakeLists.txt  Dockerfile  version.h.in
less1.1/src/: helloworld.cpp  test_version.cpp
less1.2/: .travis.yml  CMakeLists.txt  version.h.in
less1.2/include/: ip_filter.h
less1.2/src/: ip_filter.cpp  ip_filter.h  main.cpp  tools.h
less1.2/tests/: test_ip_filter.cpp
